CORS 필터로 변경 - WebMvcConfig 사용안함

--- a/user-service/corstest.html
+++ b/user-service/corstest.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         async function go(){
-            let response = await fetch("http://localhost:8001");;
+            let response = await fetch("http://localhost:8000/user-service");;
             let responseBody = await response.json();
         }
         
