디스커버리 Api Gateway에서 jwt의 userId 파싱해서 마이크로서비스의 header로 값을 넘기고 이를 통해 권한처리를 하게 변경

--- a/user-service/corstest.html
+++ b/user-service/corstest.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script>
+        // CORS 필터 테스트 : live Server (vs code) - Prefright
         async function go(){
             let response = await fetch("http://localhost:8000/user-service");
             let responseBody = await response.json();
